--- a/css/components/header.css
+++ b/css/components/header.css
@@ -3,18 +3,13 @@
 .header {
     background-color: #fff;
     position: fixed;
-
-    top: 60px;
+    top: 3.75rem;
     left: 50%;
     transform: translate(-50%);
-
-    width: calc(100% - 120px);
-
-    border-radius: 15px;
-
+    width: calc(100% - 7.5rem);
+    border-radius: 0.9375rem;
     z-index: 999;
-
-    padding: 12px 40px;
+    padding: 0.75rem 2.5rem;
 }
 
 .nav-bar {
@@ -24,7 +19,7 @@
 }
 
 .logo img {
-    width: 150px;
+    width: 9.375rem;
 }
 
 .nav-center ul,
