--- a/css/components/hero.css
+++ b/css/components/hero.css
@@ -3,33 +3,26 @@
 .hero {
     background: url(../../images/banners/modelo-homem.png) no-repeat center;
     background-size: cover;
-
-    height: 500px;
-
+    height: 31.25rem;
     position: relative;
-
     background-size: cover;
-
     z-index: 998;
-
-    margin: 40px;
-    border-radius: 20px;
+    margin: 2.5rem;
+    border-radius: 1.25rem;
 }
 
 .hero-overlay {
     width: 100%;
     height: 100%;
-
     display: flex;
     align-items: center;
     justify-content: flex-end;
-
     padding: 0 4rem;
 }
 
 .hero-content {
     color: white;
-    max-width: 388px;
+    max-width: 24.25rem;
     text-align: center;
 }
 
@@ -38,7 +31,7 @@
     margin-bottom: .5rem;
     margin: 0 0 .5rem;
     font-weight: 400;
-    margin-bottom: 40px;
+    margin-bottom: 2.5rem;
 }
 
 .hero-content .hero-subtitle {
@@ -48,7 +41,7 @@
 
 .hero-buttons {
     display: flex;
-    gap: 16px;
+    gap: 1rem;
     justify-content: center;
 }
 
@@ -56,15 +49,12 @@
     font-size: 1.25rem;
     font-weight: 400;
     color: white;
-
-    width: 161px;
-    height: 48px;
-    padding: 10px 20px;
+    width: 10.06rem;
+    height: 3rem;
+    padding: 0.625rem 1.25rem;
     justify-content: center;
     align-items: center;
-
-    border-radius: 25px;
-
+    border-radius: 1.5625rem;
     transition: background-color .3s, border .3s;
 }
 
@@ -76,7 +66,7 @@
 
 .btn-outline {
     background: transparent;
-    border: 2px solid white;
+    border: 0.125rem solid white;
 }
 
 .btn-filled {
