--- a/css/components/prod-cat.css
+++ b/css/components/prod-cat.css
@@ -6,7 +6,7 @@
     width: 100%;
     height: 100%;
     background: rgba(0,0,0,0.25);
-    border-radius: 15px;
+    border-radius: 0.9375rem;
     transition: background 0.3s;
     pointer-events: none;
     z-index: 2;
@@ -15,20 +15,19 @@
 .cat-card:hover .overlay::after {
     background: rgba(0,0,0,0.4);
 }
-/* PRODUCT CATEGORIES CSS */
 
 .cat-section {
-    padding: 40px;
+    padding: 2.5rem;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    gap: 30px;
+    gap: 1.875rem;
 }
 
 .cat-card {
-    width: 317px;
-    height: 500px;
-    border-radius: 15px;
+    width: 19.81rem;
+    height: 31.25rem;
+    border-radius: 0.9375rem;
 
     position: relative;
     overflow: hidden;
