--- a/css/components/prod-grid.css
+++ b/css/components/prod-grid.css
@@ -35,14 +35,14 @@
 
 .grid-section {
     display: grid;
-    grid-template-columns: repeat (4, 1fr);
-    grid-template-rows: repeat(3,300px);
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(3, 18.75rem);
     grid-template-areas:
         "top1 top1 top2 top2"
         "top1 top1 mid1 mid2"
         "bot1 bot1 mid1 bot2";
-    gap: 30px;
-    margin: 40px;
+    gap: 1.875rem;
+    margin: 2.5rem;
 }
 
 .card {
@@ -50,7 +50,7 @@
     background-size: cover;
     background-repeat: no-repeat;
     position: relative;
-    border-radius: 20px;
+    border-radius: 1.25rem;
 }
 
 .card .hero-content {
@@ -59,5 +59,5 @@
 
 .card .hero-title {
     font-size: 1.5rem !important;
-    margin-bottom: 10px !important;
+    margin-bottom: 0.625rem !important;
 }
