--- a/css/components/header.css
+++ b/css/components/header.css
@@ -16,6 +16,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    
 }
 
 .logo img {
@@ -41,4 +42,91 @@
 
 .nav-right ul svg:hover {
     opacity: .7;
+}
+
+.nav-container{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    align-items: center;
+}
+
+.menu-toggle, .menu-icon img {
+    display: none;
+}
+
+.menu-icon {
+    width: 1rem;
+    height: 1rem;
+    cursor: pointer;
+    z-index: 1001;
+}
+
+.menu-icon img {
+    width: 100%;
+    height: 100%;
+    transition: opacity 0.3s ease;
+}
+
+.menu-icon:hover img {
+    opacity: 0.7;
+}
+
+/* RESPONSIVO */
+
+@media (max-width:1200px){
+    .header{
+        width: calc(100% - 8rem);
+    }
+
+    .menu-icon img {
+        display: block;
+    }
+
+    .nav-container {
+        position: fixed;
+        top: 0;
+        right: -100%;
+        width: fit-content;
+        flex-direction: column;
+        padding: 50px 20px 20px;
+        background-color: #fff;
+        gap: 2rem;
+        transition: right 0.3s ease;
+        align-items: flex-start;
+        border-radius: 20px;
+    }
+
+    .nav-center,
+    .nav-right {
+        width: 100%;
+        text-align: center;
+    }
+
+    .nav-center li,
+    .nav-right li {
+        width: 100%;
+        text-align: center;
+    }
+
+    .nav-center ul,
+    .nav-right ul {
+        flex-direction: column;
+        gap: 1.5rem;
+        width: 100%;
+        padding: 0;
+    }
+
+    .nav-center a,
+    .nav-right a {
+        width: 100%;
+        border-bottom: 1px solid #eee;
+        padding: .3rem 0;
+        font-size: 1rem;
+        display: block;
+    }
+
+    .menu-toggle:checked ~ .nav-container {
+        right: 0;
+    }
 }
