--- a/css/base.css
+++ b/css/base.css
@@ -5,6 +5,11 @@ body {
     color: #333;
 }
 
+main {
+    max-width: 100%;
+    margin: 0 auto;
+}
+
 .btn {
     font-size: 1.25rem;
     font-weight: 400;
@@ -35,4 +40,12 @@ body {
 .btn-filled {
     background-color: #fff;
     color: #6329A2;
+}
+
+/* RESPONSIVE */
+
+@media (max-width: 1024px) {
+    main {
+        max-width: 100vw;
+    }
 }
