feat: Adicionado responsividade para dispositivos de telas abaixo de 1024px

--- a/css/base.css
+++ b/css/base.css
@@ -17,7 +17,9 @@ main {
 
     width: 10.06rem;
     height: 3rem;
-    padding: 0.625rem 1.25rem;
+
+    display: flex;
+    text-align: center;
     justify-content: center;
     align-items: center;
 
