--- a/css/components/header.css
+++ b/css/components/header.css
@@ -140,3 +140,16 @@
         width: 100%;
     }
 }
+
+@media (max-width: 1000px) {
+    .header {
+        width: 85%;
+        height: 68px;
+        padding: 0.625rem 1.25rem;
+        
+    }
+
+    .nav-bar {
+        width: 100%;
+    }
+}
