--- a/css/components/prod-cat.css
+++ b/css/components/prod-cat.css
@@ -85,3 +85,63 @@
         gap: 1rem;
     }
 }
+
+@media (max-width: 768px) {
+    .cat-section {
+        display: block;
+        white-space: nowrap;
+        overflow-x: auto;
+        overflow-y: hidden;
+        font-size: 0;
+        padding: 0 1rem 2rem 1rem;
+    }
+
+    .cat-section::-webkit-scrollbar {
+        height: 8px;
+    }
+
+    .cat-section::-webkit-scrollbar-thumb {
+        background-color: #888;
+        border-radius: 4px;
+    }
+
+    .cat-section::-webkit-scrollbar-track {
+        background-color: #f1f1f1;
+    }
+
+    .cat-card {
+        display: inline-block;
+        width: 90%;
+        margin-right: 1.875rem;
+        vertical-align: top;
+        font-size: 1rem;
+        text-align: center;
+    }
+
+    .cat-link {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 100%;
+        position: relative;
+    }
+
+    .cat-card:first-child {
+        margin-left: 1rem;
+    }
+}
+
+@media (max-width: 600px) {
+    .cat-section {
+        padding: 0 0px 10px 0px;
+    }
+
+    .cat-card {
+        margin-right: 10px;
+    }
+
+    .cat-card:first-child {
+        margin-left: 10px;
+    }
+}
